tests/fixtures/rules-tests/bad/PY-009-v1-pass-stub.py
# PY-009 V1/A: pass-only security function body — classic AI stub
# Realistic AI-generated API gateway validation layer — stubs never implemented
from typing import Any, Optional


def validate_user_input(data: Any) -> Any:
    """Validate and sanitize user input before processing."""
    pass  # VULN: pass-only body in validate_* function


def sanitize_html(content: str) -> str:
    """Sanitize HTML content to prevent XSS attacks."""
    pass  # VULN: pass-only body in sanitize_* function


def check_input_length(value: str, max_len: int = 255) -> bool:
    """Check that input does not exceed the maximum allowed length."""
    pass  # VULN: pass-only body in check_* function


def verify_email_format(email: str) -> bool:
    """Verify that email address is in valid format."""
    pass  # VULN: pass-only body in verify_* function


def filter_sql_chars(query_fragment: str) -> str:
    """Filter potentially dangerous SQL characters from query fragments."""
    pass  # VULN: pass-only body in filter_* function


def escape_shell_arg(arg: str) -> str:
    """Escape shell special characters before passing to subprocess."""
    pass  # VULN: pass-only body in escape_* function


class InputValidator:
    """Validates all incoming API request payloads."""

    def validate(self, payload: dict) -> bool:
        """Validate the request payload against the schema."""
        pass  # VULN: pass-only body in validate method

    def sanitize(self, field: str, value: Any) -> Any:
        """Sanitize a specific field value."""
        pass  # VULN: pass-only body in sanitize method
